feat: add registered field in contest list api
